--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\40101958\AppData\Local\Temp\testng-eclipse-1613024747\testng-customsuite.xml</span>
+                    <span>C:\Users\40101958\AppData\Local\Temp\testng-eclipse--1586413352\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.atc.seleniumframework.tests.Pillow_Purchase" hash-for-method="Pillow_Purchase">Pillow_Purchase</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.atc.seleniumframework.tests.Invalid_CreditCard_Num" hash-for-method="Invalid_CreditCard_Num">Invalid_CreditCard_Num</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +120,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.atc.seleniumframework.tests.Pillow_Purchase</span>
+              <span class="class-name">com.atc.seleniumframework.tests.Invalid_CreditCard_Num</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Pillow_Purchase">
-                  </a> <!-- Pillow_Purchase -->
-                  <span class="method-name">Pillow_Purchase</span>
+                  <a name="Invalid_CreditCard_Num">
+                  </a> <!-- Invalid_CreditCard_Num -->
+                  <span class="method-name">Invalid_CreditCard_Num</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\40101958\AppData\Local\Temp\testng-eclipse-1613024747\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\40101958\AppData\Local\Temp\testng-eclipse--1586413352\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.atc.seleniumframework.tests.Pillow_Purchase&quot;/&gt;
+      &lt;class name=&quot;com.atc.seleniumframework.tests.Invalid_CreditCard_Num&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Pillow_Purchase')
-data.setCell(0, 2, 'com.atc.seleniumframework.tests.Pillow_Purchase')
-data.setCell(0, 3, 8413);
+data.setCell(0, 1, 'Invalid_CreditCard_Num')
+data.setCell(0, 2, 'com.atc.seleniumframework.tests.Invalid_CreditCard_Num')
+data.setCell(0, 3, 30311);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 30 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,30 +219,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.atc.seleniumframework.tests.Pillow_Purchase</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.atc.seleniumframework.tests.Invalid_CreditCard_Num</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">beforeTest(chrome)</span>
-                <span class="method-start">54 ms</span>
+                <span class="method-start">44 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">Pillow_Purchase</span>
-                <span class="method-start">7081 ms</span>
+                <span class="method-name">Invalid_CreditCard_Num</span>
+                <span class="method-start">7165 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod([TestResult name=Pillow_Purchase status=SUCCESS method=Pillow_Purchase.Pillow_Purchase()[pri:0, inst...)</span>
-                <span class="method-start">15497 ms</span>
+                <span class="method-name">afterMethod([TestResult name=Invalid_CreditCard_Num status=SUCCESS method=Invalid_CreditCard_Num.Invalid_CreditC...)</span>
+                <span class="method-start">37479 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-test after">
                 <span class="method-name">afterTest</span>
-                <span class="method-start">15498 ms</span>
+                <span class="method-start">37482 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">afterSuite</span>
-                <span class="method-start">16706 ms</span>
+                <span class="method-start">38333 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
