--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="79f379">  <td>20/03/26 22:53:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Invalid_CreditCard_Num.Invalid_CreditCard_Num()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">Invalid_CreditCard_Num</td> 
+<tr bgcolor="79f379">  <td>20/06/18 12:30:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Pillow_Purchase.Pillow_Purchase()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">Pillow_Purchase</td> 
   <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>20/03/26 22:53:53</td>   <td>32679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="c0edeb">  <td>20/06/18 12:33:00</td>   <td>169277</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>20/03/26 22:53:55</td>   <td>34529</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">&lt;&lt;afterSuite</td> 
+<tr bgcolor="c0edeb">  <td>20/06/18 12:33:01</td>   <td>169954</td> <td title="&lt;&lt;TestBase.afterSuite()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">&lt;&lt;afterSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>20/03/26 22:53:54</td>   <td>33373</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">&lt;&lt;afterTest</td> 
+<tr bgcolor="c0edeb">  <td>20/06/18 12:33:00</td>   <td>169279</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.afterTest()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">&lt;&lt;afterTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>20/03/26 22:53:13</td>   <td>-7065</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">&gt;&gt;beforeSuite</td> 
+<tr bgcolor="c0edeb">  <td>20/06/18 12:30:06</td>   <td>-5023</td> <td title="&gt;&gt;TestBase.beforeSuite()[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">&gt;&gt;beforeSuite</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
-<tr bgcolor="c0edeb">  <td>20/03/26 22:53:13</td>   <td>-7030</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Invalid_CreditCard_Num@73ad2d6]">&gt;&gt;beforeTest</td> 
+<tr bgcolor="c0edeb">  <td>20/06/18 12:30:06</td>   <td>-5001</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeTest(java.lang.String)[pri:0, instance:com.atc.seleniumframework.tests.Pillow_Purchase@73ad2d6]">&gt;&gt;beforeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1445157774</td>   <td></td> </tr>
 </table>
