--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -20,17 +20,17 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Credit card details (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Invalid Credit card details (0/1/0)</td><td valign='top' align='right'>
   <a href='Invalid Credit card details.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Valid Pillow Purchase (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Valid Pillow Purchase (0/1/0)</td><td valign='top' align='right'>
   <a href='Valid Pillow Purchase.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
